--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-body {
-  font-family: sans-serif;
-  text-align: center;
-  background: #222;
-  color: white;
-  margin: 0;
-  padding: 0;
+html, body {
+    margin: 0;
+    padding: 0;
+    background: #000;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+canvas {
+    display: block;
+    background: #111;
+    box-shadow: 0 0 20px #00ffff44;
 }
 
 .menu-container {
